--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "gendiff",
   "version": "1.0.0",
   "type": "module",
+  "bin": {
+    "gendiff": "gendiff.js"
+  },
   "description": "[![Actions Status](https://github.com/karamba-x/fullstack-javascript-project-46/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/karamba-x/fullstack-javascript-project-46/actions)",
   "main": "index.js",
   "scripts": {
