--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "bin": {
-    "gendiff": "gendiff.js"
+    "gendiff": "bin/gendiff.js"
   },
   "description": "[![Actions Status](https://github.com/karamba-x/fullstack-javascript-project-46/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/karamba-x/fullstack-javascript-project-46/actions)",
-  "main": "index.js",
+  "main": "bin/gendiff.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
